--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
 	ext.kotlin_version = '1.3.50'
+	ext.junit_version = '5.5.2'
 	repositories {
 		mavenCentral()
 	}
@@ -32,19 +33,19 @@ dependencies {
 	implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
 	implementation 'io.javalin:javalin:3.5.0'
-	implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.28'
+	implementation 'org.slf4j:slf4j-simple:1.7.28'
 	implementation "com.fasterxml.jackson.core:jackson-databind:2.10.0.pr1"
 	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.10.0.pr1'
 
 	implementation 'org.hibernate.validator:hibernate-validator:6.1.0.Alpha6'
 	implementation 'org.glassfish:javax.el:3.0.1-b11'
 
-	implementation group: 'org.jetbrains.exposed', name: 'exposed', version: '0.17.3'
+	implementation 'org.jetbrains.exposed:exposed:0.17.3'
 	implementation 'mysql:mysql-connector-java:8.0.17'
 
-	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.2'
-	testImplementation group: 'io.mockk', name: 'mockk', version: '1.9.3'
-	testImplementation group: 'org.skyscreamer', name: 'jsonassert', version: '1.5.0'
+	testImplementation "org.junit.jupiter:junit-jupiter-engine:$junit_version"
+	testImplementation 'io.mockk:mockk:1.9.3'
+	testImplementation 'org.skyscreamer:jsonassert:1.5.0'
 	testImplementation 'com.wix:wix-embedded-mysql:4.6.0'
 }
 
