--- a/build.gradle
+++ b/build.gradle
@@ -42,12 +42,13 @@ dependencies {
 
 	implementation 'org.jetbrains.exposed:exposed:0.17.3'
 	implementation 'mysql:mysql-connector-java:8.0.17'
+    implementation 'org.litote.kmongo:kmongo:3.11.0'
 
 	testImplementation "org.junit.jupiter:junit-jupiter-engine:$junit_version"
 	testImplementation 'io.mockk:mockk:1.9.3'
 	testImplementation 'org.skyscreamer:jsonassert:1.5.0'
 	testImplementation 'com.wix:wix-embedded-mysql:4.6.0'
-}
+	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.2.0'}
 
 test {
 	useJUnitPlatform()
