--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-	ext.kotlin_version = '1.3.50'
+	ext.kotlin_version = '1.3.61'
 	ext.junit_version = '5.5.2'
 	repositories {
 		mavenCentral()
@@ -48,7 +48,8 @@ dependencies {
 	testImplementation 'io.mockk:mockk:1.9.3'
 	testImplementation 'org.skyscreamer:jsonassert:1.5.0'
 	testImplementation 'com.wix:wix-embedded-mysql:4.6.0'
-	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.2.0'}
+	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.2.0'
+}
 
 test {
 	useJUnitPlatform()
