--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
-#Fri Sep 20 22:45:51 BST 2019
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.6.2-all.zip
+#Wed Jan 08 23:48:16 GMT 2020
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.0.1-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
