--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ dependencies {
 	testImplementation "org.junit.jupiter:junit-jupiter-engine:$junit_version"
 	testImplementation 'io.mockk:mockk:1.9.3'
 	testImplementation 'org.skyscreamer:jsonassert:1.5.0'
+	testImplementation 'com.tngtech.archunit:archunit-junit5-api:0.12.0'
+	testRuntime 'com.tngtech.archunit:archunit-junit5-engine:0.12.0'
+
 	testImplementation 'com.wix:wix-embedded-mysql:4.6.0'
 	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.2.0'
 }
