--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 buildscript {
 	ext.kotlin_version = '1.3.72'
-	ext.junit_version = '5.5.2'
 	repositories {
 		mavenCentral()
 	}
@@ -44,11 +43,9 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.+'
     implementation 'org.litote.kmongo:kmongo:3.+'
 
-	testImplementation "org.junit.jupiter:junit-jupiter-engine:$junit_version"
+	testImplementation "org.junit.jupiter:junit-jupiter-engine:5.+"
 	testImplementation 'io.mockk:mockk:1.+'
 	testImplementation 'org.skyscreamer:jsonassert:1.+'
-	testImplementation 'com.tngtech.archunit:archunit-junit5-api:0.+'
-	testRuntime 'com.tngtech.archunit:archunit-junit5-engine:0.+'
 
 	testImplementation 'com.wix:wix-embedded-mysql:4.+'
 	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.+'
