--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 	implementation 'org.hibernate.validator:hibernate-validator:6.+'
 	implementation 'org.glassfish:javax.el:3.+'
 
-	implementation 'org.jetbrains.exposed:exposed:0.17.3'
+	implementation 'org.jetbrains.exposed:exposed:0.+'
 	implementation 'mysql:mysql-connector-java:8.+'
     implementation 'org.litote.kmongo:kmongo:3.+'
 
