Create Password value object

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ repositories {
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions {
+        languageVersion = "1.4"
+    }
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
